update npm update URL follow RESTful
